flux/infra/mosquitto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: default
spec:
  selector:
    matchLabels:
      app: mosquitto
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      nodeSelector:
        network: fast
      containers:
      - name: mosquitto
        image: eclipse-mosquitto
        ports: 
          - containerPort: 1883
        volumeMounts:
          - name: mosquitto-config
            mountPath: /mosquitto/config
            readOnly: true
      volumes:
      - name: mosquitto-config
        configMap:
          name: mosquitto-config
          items:
            - key: mosquitto-conf
              path: mosquitto.conf
