flux/infra/mosquitto/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
    - protocol: TCP
      port: 1883
      targetPort: 1883
      nodePort: 31883
