flux/infra/mosquitto/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entrypoints:
    - mqtt
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mosquitto
          port: 1883
